--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,26 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-env/
-ENV/
-.venv
-
-# Environment Variables
+# Environment variables (IMPORTANT - keeps your secrets safe)
 .env
 *.env
 
-# IDE
+# Python cache
+__pycache__/
+*.pyc
+
+# Virtual environment
+venv/
+env/
+
+# Google OAuth credentials
+client2.json
+token.json
+
+# IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
 # Logs
 *.log
-
-# Database
-*.db
-*.sqlite3
-
-# Temporary files
-*.tmp
-temp/
-tmp/
-
-# Google OAuth credentials
-client2.json
-token.json
-credentials.json
-
-# Streamlit
-.streamlit/secrets.toml
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pytest
-.pytest_cache/
-.coverage
-htmlcov/
-
-# MyPy
-.mypy_cache/
-.dmypy.json
-dmypy.json
